<resources>
    <string name="app_name">新嘉闻</string>
    <string name="tab_home">要闻</string>
    <string name="tab_announce">公告</string>
    <string name="tab_activity">动态（旧）</string>
    <string name="tab_media">报道</string>
    <string name="iv_description">文章缩略图</string>
    <string name="item_loading">文章加载中&#8230;</string>
    <string name="item_refreshing">刷新中&#8230;</string>
    <string name="item_refresh_finished">文章已是最新&#8230;</string>
    <string name="content_not_found">噢哦，文章内容不见了&#8230;</string>


    <string name="sv_menu_item_search">搜索新闻</string>
    <string name="menu_item_link">原文链接</string>
    <string name="menu_item_share">分享文章</string>
    <string name="dl_menu_item">侧边栏</string>
    <string name="about_author">关于</string>
    <string name="about_page">关于作者</string>

    <string name="say_hi">你好，欢迎使用这个小应用 :P</string>
    <string name="home_page">我的主页：https://rosuh.me</string>
    <string name="my_blog">我的博客：https://blog.rosuh.me</string>
    <string name="project_page">
        · <a href="https://github.com/rosuH/JiaNews">开源地址</a> \n \n
        · <a href="https:rosuh.me">我的主页</a> \n \n
        · 可以在<a href="https://www.coolapk.com/apk/me.rosuh.searchindouban">酷安</a>评论反馈，你也可以在上面的主页里，找到多种我的联系方式 \n \n
        · icon 部分来自 <a href="https://icons8.com/app">icon8</a> 和 <a href="http://iconfont.cn">iconfont</a> \n \n
        · 部分文章、图片版权所有© <a href="http://www.jyu.edu.cn">嘉应学院</a>
    </string>

    <string name="test_text_title">关于做好2017年归档材料移交工作的通知档案馆对2017年度学校各院</string>
    <string name="test_text_summary">各院、部，各部门：
　　根据《高等学校档案管理办法》的有关规定，档案馆对2017年度学校各院、部，各部门从事招生、教学、科研、
        管理等活动直接形成的对学生、学校和社会有保存价值的各种文字
    </string>
    <string name="test_public_time">18&#8211;04&#8211;23</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="font_size">字号</string>
    <string name="tiny_font">中</string>
    <string name="medium_font">大</string>
    <string name="large_font">超大</string>
    <string name="article_views">阅读数</string>
    <string name="banner">Banner</string>
    <string name="user_center">个人中心</string>
    <string name="go_login">登录</string>
    <string name="logout">注销</string>
    <string name="loging">正在登陆中...</string>
    <string name="register">注册</string>
    <string name="registering">正在注册</string>
    <string name="item_home">主页</string>
    <string name="board_creating">帖子创建中</string>
    <string name="boards">看板</string>
</resources>
