<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_font_size"
        android:checkable="false"
        android:title="@string/font_size"
        app:actionViewClass="android.widget.TextView"
        />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_tiny_font"
            android:title="@string/tiny_font"
            android:checked="false"
            />
        <item
            android:id="@+id/item_normal_font"
            android:title="@string/medium_font"
            android:checked="true"
            />
        <item
            android:id="@+id/item_large_font"
            android:title="@string/large_font"
            android:checked="false"
            />
    </group>
</menu>